version/0.30/_sources/api/solver/_autosummary/settings/radiation.rst.txt
:orphan:

.. _radiation:

radiation
=========

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.radiation
    :show-inheritance:

.. rubric:: Attributes

==============================================   ==========================================================

Attribute                                                                                           Summary

==============================================   ==========================================================
:ref:`model <model_2>`                                                          Activate a radiation model.

:ref:`discrete_ordinates <discrete_ordinates>`       Enable/disable the discrete ordinates radiation model.

:ref:`monte_carlo <monte_carlo>`                            Enable/disable the Monte Carlo radiation model.

:ref:`s2s <s2s>`                                     Enable/disable the Surface to Surface radiation model.

:ref:`multiband <multiband>`                                                        Multi-band information.

:ref:`solve_frequency <solve_frequency>`                                         Radiation solve frequency.

:ref:`solar_load <solar_load>`                                                 Activate a solar load model.

==============================================   ==========================================================

.. rubric:: Included in:

======================   ===================

Parent                               Summary

======================   ===================
:ref:`models <models>`       'models' child.

======================   ===================

